# flock

./: Makefile  README.md  flocking.cabal  stack.yaml
configs/: exp2.cfg  exp3.cfg  homing.cfg
docs/: Flock.html  Simulation.html  doc-index.html  flocking.haddock  flocking.txt  index.html  mini_Flock.html  mini_Simulation.html
docs/src/: Flock.html  Simulation.html
examples/adhoc_test/: Main.hs
examples/msc/: Main.hs  exp1.cfg
examples/msc2/: Main.hs
lib/: Flock.hs  Simulation.hs
src/: Main.hs
