name:                flocking
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/SRechenberger/flock#readme
license:             BSD3
license-file:        LICENSE
author:              Sascha Rechenberger
maintainer:          sascha.rechenberger@uni-ulm.de
copyright:           Copyright: (c) 2016 Sascha Rechenberger
category:            Simulation
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:
    lib
  exposed-modules:
    Flock,
    Simulation
  default-language:
    Haskell2010
  build-depends:
    base >= 4.9 && < 5,
    lens,
    gloss,
    random,
    MonadRandom,
    mtl
  ghc-options: -Wall

executable adhoc_test
  hs-source-dirs:      examples/adhoc_test
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base >= 4.9 && < 5,
    lens,
    gloss,
    random,
    flocking,
    MonadRandom
  ghc-options: -Wall
